--- a/_pages/academic_projects.html
+++ b/_pages/academic_projects.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Academic Projects"
+title: "Final Year Projects"
 permalink: /academic_projects/
 author_profile: true
 ---
