--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -26,19 +26,19 @@ redirect_from:
   
   <div>
     <h2>
-      Applied Data Science Internship
+      Year in Industry working as an Innovation Assistant and Repair Specialist
     </h2>
   
     <h2>
-      Warwick Snow
+      Univeristy of Sheffield Triathlon Club
     </h2>
   
     <h3>
-      President
+      Club Secretary
     </h3>
   
     <h3>
-      Captain
+      Social Secretary
     </h3>
   
   </div>
