--- a/_pages/experience.html
+++ b/_pages/experience.html
@@ -1,6 +1,6 @@
 ---
-permalink: /skills_experience/
-title: "Skills & Experience"
+permalink: /_work_experience/
+title: "Work Experience"
 author_profile: true
 redirect_from: 
   - /experience/
