quotation marks in title

--- a/_academic_projects/Page_1_Emotion_Recognition.html
+++ b/_academic_projects/Page_1_Emotion_Recognition.html
@@ -1,5 +1,5 @@
 ---
-title: Final Year Dissertation
+title: "Final Year Dissertation"
 collection: academic_projects
 permalink: /academic_projects/emotion_recognition
 author_profile: true
