--- a/_academic_projects/Page_1_Emotion_Recognition.html
+++ b/_academic_projects/Page_1_Emotion_Recognition.html
@@ -3,7 +3,7 @@ title: "Final Year Dissertation"
 collection: academic_projects
 permalink: /academic_projects/emotion_recognition
 author_profile: true
-overview: The project produced a novel facial emotion recognition framework that can be used to classify emotions from images. <br>
+overview: Created a life cycle analysis of a waterproof jacket. <br>
 git_link: https://github.com/benhoskings1/Emotion_Recognition.git
 languages: Matlab + Python
 cover_image: NoseTipDetection.png
