--- a/_academic_projects/Page_1_Emotion_Recognition.html
+++ b/_academic_projects/Page_1_Emotion_Recognition.html
@@ -6,7 +6,7 @@ author_profile: true
 overview: Created a life cycle analysis of a waterproof jacket. <br>
 git_link: https://github.com/benhoskings1/Emotion_Recognition.git
 languages: Matlab + Python
-cover_image: NoseTipDetection.png
+cover_image: CVpic.png
 dates: 2023-2024
 container: image
 ---
